Closed Bug 1736258 Opened 4 years ago Closed 4 years ago

composition test failures: test_attachment_intl.js, test_nsMsgCompose2.js, test_componentsExist.js

Categories

(MailNews Core :: Composition, defect)

defect

Tracking

(thunderbird_esr91 fixed, thunderbird94 wontfix)

RESOLVED FIXED
95 Branch
Tracking Status
thunderbird_esr91 --- fixed
thunderbird94 --- wontfix

People

(Reporter: benc, Assigned: benc)

References

(Regression)

Details

(Keywords: leave-open, regression)

Attachments

(2 files)

A few tests seem to use nsMsgCompose without calling initialize() upon it. They currently die in the nsMsgCompose dtor.

Assignee: nobody → benc
Status: NEW → ASSIGNED

That patch does nothing specific to address test_componentsExist.js, but the test does now run.
The nsMsgCompose dtor no longer crashes when destroying non-initialized objects. The test is just testing object creation, not any actual use, so I think it's OK as is.

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/1fbbcaf72510
Fix crashes in test_attachment_intl.js, test_nsMsgCompose2.js (regressed due to Bug 1735601). r=darktrojan

Ideally, all methods on nsMsgCompose should fail if initialize() hasn't been called, but that seems a little overbearing.
I didn't make any changes to test_componentsExist.js - it just creates objects, but doesn't try to do anything with them, so I think it's fine that it doesn't call initialize().

So I'm going to say it's fine now as it is, and close this bug.

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED

Comment on attachment 9246343 [details]
Bug 1736258 - Fix crashes in test_attachment_intl.js, test_nsMsgCompose2.js (regressed due to Bug 1735601). r=darktrojan

[Triage Comment]
Approved for beta (needed for bug 1735601)

[Approval Request Comment]
Regression caused by (bug #):
User impact if declined:
Testing completed (on c-c, etc.):
Risk to taking this patch (and alternatives if risky): "just tests"

Attachment #9246343 - Flags: approval-comm-esr91?
Attachment #9246343 - Flags: approval-comm-beta+

Backing out both changes from beta due to build failures caused by uplift of bug 1735601, which this bug is hopelessly ensnared by.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---

Comment on attachment 9246343 [details]
Bug 1736258 - Fix crashes in test_attachment_intl.js, test_nsMsgCompose2.js (regressed due to Bug 1735601). r=darktrojan

removing comm-esr91 flag to avoid confusion - please renominate after beta testing is compelte

Attachment #9246343 - Flags: approval-comm-esr91?

Comment on attachment 9246343 [details]
Bug 1736258 - Fix crashes in test_attachment_intl.js, test_nsMsgCompose2.js (regressed due to Bug 1735601). r=darktrojan

No uplift to beta needed as this patch will be included in 95.0beta1 after the merge.

Attachment #9246343 - Flags: approval-comm-beta+
Status: REOPENED → RESOLVED
Closed: 4 years ago4 years ago
Resolution: --- → FIXED

[Approval Request Comment]
Rebased to esr91.

Attachment #9249329 - Flags: approval-comm-esr91?

Comment on attachment 9249329 [details] [diff] [review]
1736258-esr91.patch

[Triage Comment]
Approved for esr91

Attachment #9249329 - Flags: approval-comm-esr91? → approval-comm-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: