Bug 1736258 - Fix crashes in test_attachment_intl.js, test_nsMsgCompose2.js (regressed due to Bug 1735601). r=darktrojan

Differential Revision: https://phabricator.services.mozilla.com/D128696

--HG--
extra : amend_source : a8e3710e4f6ac96866f410b913e3244acca5fa9c