mailnews/compose/src/nsMsgCompose.cpp
@@ -187,6 +187,11 @@ nsMsgCompose::nsMsgCompose() {
 }
 
 nsMsgCompose::~nsMsgCompose() {
+  if (!m_compFields) {
+    // Uhoh. We're in an uninitialized state. Maybe initialize() failed, or
+    // was never even called.
+    return;
+  }
   // Remove temporary attachment files, e.g. key.asc when attaching public key.
   nsTArray<RefPtr<nsIMsgAttachment>> attachments;
   m_compFields->GetAttachments(attachments);
@@ -2774,9 +2779,9 @@ nsresult nsMsgCompose::QuoteOriginalMessage()  // New template
 
   mQuoteStreamListener->SetComposeObj(this);
 
-  rv = mQuote->QuoteMessage(
-      mOriginalMsgURI.get(), mWhatHolder != 1, mQuoteStreamListener,
-      mCharsetOverride, !bAutoQuote, originalMsgHdr);
+  rv = mQuote->QuoteMessage(mOriginalMsgURI.get(), mWhatHolder != 1,
+                            mQuoteStreamListener, mCharsetOverride, !bAutoQuote,
+                            originalMsgHdr);
   return rv;
 }
 
